design.css
/* ... */
/* Topic bar hover additions contributed with permission from the project:
  <https://github.com/hbang/Simplified-Light-Modifications> */

#topic_bar:hover {
  overflow: visible;
  white-space: normal;
}

#topic_bar a,
#topic_bar span.channel {
  color: #8E8E8E;
  border-color: #8E8E8E;
  text-shadow: 1px 1px rgba(10, 10, 10, 0.7);
}
/* @end */
/* Hidden scrollback history bar */
#scrolling_history {
  z-index: 400;
  position: fixed;
  bottom: 0;
  left: 0;
  right: 0;
  height: auto;
  box-shadow: 0 1px 5px #777;
  border-top: 1px solid #404040;
  text-shadow: 1px 1px rgba(10, 10, 10, 0.7);
  color: #FFFFFF;
  background-color: #859900;
  display: none;
  overflow: hidden;
}

#scrolling_history .senderContainer {
  color: #FFFFFF;
  background-color: #859900;
}
/* @group Images */



/* Images */

body a img {
  border: 0;
}

body video,
body img {
  display: block;
}

.inlineImageCell {
  position: relative;
  display: table;
  overflow: auto;
  width: auto;
  height: auto;
}

.inlineImageCell > a {
  display: inline-block;
  border: none;
}

.inlineImageCell .image {
  display: inline-block;
  float: left;
  margin: 15px 15px 12px 10px;
  min-width: 100px;
}

.inlineImageCell .closeButton {
  background: #000000;
  cursor: pointer;
  border-radius: 50%;
  position: absolute;
  box-sizing: border-box;
  font-size: 20px !important;
  font-family: "Helvetica Neue" !important;
  font-weight: 100 !important;
  text-align: center;
  line-height: 17px;
  color: #f2f2f2;
  border: 2px solid #f2f2f2;
  top: 5px;
  right: 5px;
  width: 25px;
  height: 25px;
}


/* Remember Line */
div[id=mark] {
  clear: both;
  position: relative;
  z-index: 295;
  margin-top: -1px;
  border-bottom: 3px solid;
  border-color: #D33682;
  -webkit-transition: 0.2s linear;
}

body[dir=ltr] div[ltype=action] .sender:before {
  margin-right: 0.6em;
  font-weight: bold;
  font-size: 80% !important;
  content: "●";

}

/* Historic / Log readback */
#historic_messages,
#body_home > .historic {
  opacity: 0.83;
}

/* NOTICE/CTCP/WALLOPS */
body div.line[ltype=ctcp],
body div.line[ltype=notice],
body div.line[ltype=wallops] {
  z-index: 191;
  position: relative;
  border-bottom: none;
  border-top: none;
  border-left: none;
  color: #b58900;
  /* background-color: #1d2734; Maybe remove?*/
}

body div[ltype=ctcp] .senderContainer,
body div[ltype=notice] .senderContainer {
  color: #b58900;
  font-weight: 700;
  min-height:23px;
  width: 134px;
  padding-right:7px;
  text-align:right;
  display:inline-block;
  overflow: auto;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  text-overflow: ellipsis;
  /* background-color: #161616; */
}

body div[ltype=notice] .message {
  color: #f2f2f2;
}

/* PRIVMSG */
body div.line[ltype=privmsg][highlight=false] {
  padding: 0;
  position: relative;
  min-height: 23px;
}

body div[ltype=privmsg] .senderContainer {
  /*  font-weight: 700; */
  min-height:23px;
  width: 134px;
  /* border-right: 3px solid rgb(64, 64, 64); */
  border-right: 2px solid #586E75;
  padding-right:12px;
  background-color: #001f2a;
  text-align:right;
  display:inline-block;
  overflow: hidden;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  text-overflow: ellipsis;
}

body .senderContainer .swrapper {
  font-size: 0px !important;
  opacity: 0;
}

body div[ltype="privmsg"] .message {
  word-break: break-word;
  color: #B7B7B7;
}

body div[ltype="privmsg"][encrypted="true"] {
  background: repeating-linear-gradient(-45deg, rgba(79, 79, 79, 0.1), rgba(79, 79, 79, 0.1) 20px, rgba(68, 89, 63, 0.3) 20px, rgba(68, 89, 63, 0.3) 40px) !important;
}

body div[ltype="privmsg"][encrypted="failed"] {
  background: repeating-linear-gradient(-45deg, rgba(45, 6, 6, 0.2), rgba(45, 6, 6, 0.2) 20px, rgba(104, 15, 15, 0.2) 20px, rgba(104, 15, 15, 0.2) 40px) !important;
}

body div[ltype="privmsg"][highlight=true][encrypted="true"] {
  background: repeating-linear-gradient(-45deg, #30473a, #30473a 20px, rgba(68, 89, 63, 0.3) 20px, rgba(68, 89, 63, 0.3) 40px) !important;
}

body div[ltype=privmsg] p[ltype=myself] .message {
 color: #B7B7B7;
}

body div[ltype=privmsg] p span.effect[color-number=1]:not([bgcolor-number]) {
  color: #f2f2f2; /* make black text with no bg white for readability */
}

/* ACTION */
body div[ltype=action] .senderContainer {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  width: 134px;
  /*  font-weight: 700;*/
  border-top: 1px solid transparent;
  border-bottom: 1px solid transparent;
  background-color: #001f2a;
  height:22px;
  padding-right: 7px;
  text-align:right;
  display:inline-block;
  overflow: hidden;
}

body div.line[ltype=action] .message {
  word-break: break-word;
  padding-top: 1px;
}

body div.line[ltype=action][highlight=true] .message {
  color: #f2f2f2 !important;
}

/* DEBUG/INVITE */
body div.line[ltype=invite],
body div.line[ltype=debug],
body div.line[ltype=dcc-file-transfer],
body div.line[ltype=off-the-record-encryption-status] {
  color: #f2f2f2;
  z-index: 190;
  background: #001f2a;
  position: relative;
  padding: 2px 0 2px 0;
  /* border-top: 1px solid #393939;
  border-bottom: 1px solid #393939; */
}

body div.line[ltype=ctcp] .message,
body div.line[ltype=invite] .message,
body div.line[ltype=debug] .message,
body div.line[ltype=dcc-file-transfer] .message,
body div.line[ltype=off-the-record-encryption-status] .message {
  text-indent: 0;
  padding-left: 145px !important;
}

/* off-the-record-encryption-status Message Event */
body div.line[ltype=off-the-record-encryption-status]  .message {
  color: #ff0000;
  font-weight: 700;
}

/* Message of the Day (MOTD) */
/* 720, 721, 722 are used by ShadowIRCd for Oper MOTD. */
/* 372, 375, 376 are normal MOTD shared by several IRCds. */


/* GENERAL EVENT */
body span.message {
  position: relative;
  padding-left: 150px;
  /* padding-right: 25px; */
  display: table-cell;
  min-height: 22px;
  line-height: 22px;
  overflow: visible !important;
}
/* ... */

